--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "markdown-table": "^2.0.0",
-    "nanoid": "^4.0.0"
+    "markdown-table": "^2.0.0"
   }
 }
